--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
 body, html {
-  height: 100%;
   width: 100%;
+
 }
 
 body {
